[gd_scene load_steps=6 format=3 uid="uid://bsrd83lklbwxo"]

[ext_resource type="Script" path="res://paint.gd" id="1_opcl2"]
[ext_resource type="PackedScene" uid="uid://ug0d45jnf60f" path="res://config_window.tscn" id="2_8ddk5"]
[ext_resource type="Texture2D" uid="uid://bgjt3ou27qg1i" path="res://img/hand/default.png" id="3_834fg"]
[ext_resource type="Script" path="res://hand.gd" id="4_xbl3o"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(1, 1, 1, 1)

[node name="Paint" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_opcl2")

[node name="DrawingAreaBG" type="Panel" parent="."]
visible = false
show_behind_parent = true
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("1")

[node name="TLPos" type="Marker2D" parent="."]

[node name="ConfigWindow" parent="." instance=ExtResource("2_8ddk5")]

[node name="Hand" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_834fg")
centered = false
offset = Vector2(-768, -256)
script = ExtResource("4_xbl3o")

[node name="PaintRoot" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="brush_color_changed" from="ConfigWindow" to="." method="_on_config_window_brush_color_changed"]
[connection signal="brush_size_changed" from="ConfigWindow" to="." method="_on_config_window_brush_size_changed"]
[connection signal="canvas_size_changed" from="ConfigWindow" to="." method="_on_config_window_canvas_size_changed"]
[connection signal="clear_canvas" from="ConfigWindow" to="." method="_on_config_window_clear_canvas"]
[connection signal="hand_disabled" from="ConfigWindow" to="Hand" method="_on_config_window_hand_disabled"]
[connection signal="hand_enabled" from="ConfigWindow" to="Hand" method="_on_config_window_hand_enabled"]
[connection signal="hand_image_file_changed" from="ConfigWindow" to="Hand" method="_on_config_window_hand_image_file_changed"]
[connection signal="hand_image_horizontal_flip_changed" from="ConfigWindow" to="Hand" method="_on_config_window_hand_image_horizontal_flip_changed"]
[connection signal="hand_image_scale_changed" from="ConfigWindow" to="Hand" method="_on_config_window_hand_image_scale_changed"]
[connection signal="pen_position_changed" from="ConfigWindow" to="Hand" method="_on_config_window_pen_position_changed"]
